added automation test script

--- a/POC automation/PocAutomation.csproj
+++ b/POC automation/PocAutomation.csproj
@@ -4,7 +4,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{003238F1-F27B-4361-99F1-EFC64CEE9D7E}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>POC_automation</RootNamespace>
     <AssemblyName>POCautomation</AssemblyName>
