--- a/POC automation/App.config
+++ b/POC automation/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
+    <!--<add key="TestServer" value="192.168.73.67"/>-->
     <add key="TestServer" value=""/>
     <add key="TestPort" value="4445" />
-    <add key="TestEnvironment" value="${bamboo.TestEnvironment}" />
     <add key="TestBrowser" value="chrome" />
   </appSettings>
 </configuration>
