--- a/POC automation/packages.config
+++ b/POC automation/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Selenium.Chrome.WebDriver" version="2.37" targetFramework="net45" />
-  <package id="Selenium.WebDriver" version="3.11.1" targetFramework="net45" />
+  <package id="Selenium.Support" version="3.12.0" targetFramework="net45" />
+  <package id="Selenium.WebDriver" version="3.12.0" targetFramework="net45" />
   <package id="Selenium.WebDriver.IEDriver" version="3.11.1" targetFramework="net45" />
   <package id="Selenium.WebDriver.PhantomJS.Xplatform" version="2.45.0.1" targetFramework="net45" />
 </packages>
